mame (0.173-2) UNRELEASED; urgency=medium

  * Add ftbfs_v60_m_fetch_xor.patch: cherrypick from git to fix a compile
    error on several Debian architectures.

 -- Jordi Mallach <jordi@debian.org>  Fri, 13 May 2016 00:15:16 +0200

mame (0.173-1) unstable; urgency=medium

  [ Cesare Falco ]
  * debian/rules
    - Remove dh_override_autoclean, use external debian/clean file instead
    - Update get-orig-source to better fit upstream repository structure
    - Now full build log can be requested by setting DH_VERBOSE
    - Enable build optimizations, they increase performance greatly
    - Some arch-specific tuning
  * Removed refs to jquery library, no longer needed

  [ Jordi Mallach ]
  * New upstream release.
  * Drop date_timestamp.patch, fixed upstream.
  * Add an additional source lintian override.
  * Bump Standards-Version to 3.9.8.
  * Define QT_HOME to /usr/lib/<triplet>/qt5/ and drop qt5_build.patch.
    Thanks again to Sune Vuorela.
  * Update copyright file for new sources.
  * Don't install testkeys, as it no longer exists.
  * Don't try to cleanup rapidjson non-free bits that are now gone upstream.
  * Install manpages from new source location.
  * Don't chmod data dirs unconditionally, use `find -type f` instead to
    avoid installing dirs with wrong perms.
  * Remove new binaries and cruft from upstream sources.

 -- Jordi Mallach <jordi@debian.org>  Mon, 02 May 2016 14:20:14 +0200

mame (0.172-1) unstable; urgency=medium

  * New upstream release.
    - MAME is now licensed under the GPL-2
  * Move to main section.
  * Massive update of debian/copyright to adapt to licensing changes.
  * Add License paragraphs for all minor variants of BSD and custom licenses.
  * Update MESS references in mame-tools' description.
  * Update Build-Depends:
    - libportaudio-dev → portaudio19-dev
    - libqt4-dev → qtbase5-dev
  * Build against system sqlite3. Define USE_SYSTEM_LIB_SQLITE3=1 and
    add libsqlite3-dev to B-Ds.